syntax = "proto3";

option csharp_namespace = "GRPCService";
package image;

service image{

  rpc Upload(stream FileUploadRequest) returns (FileUploadResponse);
  rpc GetImageForPost(FileReturnRequest) returns (stream FileReturn);
}
message ImageObj{
  int32 id = 1;
  string href = 2;
}

message MetaData {
  string name = 1;
  string type = 2;
}
message FileObj{
  bytes content = 1;
}
enum UploadStatus {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message FileUploadRequest {
  oneof request {
    MetaData metadata = 1;
    FileObj file = 2;
  }
}
message FileUploadResponse {
  string name = 1;
  UploadStatus status = 2;
}

message FileReturnRequest {
  string name = 1;
  
}

message FileReturn {
 
    bytes data = 1;
  
}