syntax = "proto3";

option csharp_namespace = "GRPCService";

package subcategory;

service subCategory{

}
message SubcategoryObj{
  int32 id =1;
  string name =2;
 
}